[package]
name = "dawn-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto = { version = "*" }
hex = { version = "*" }
ring = { version = "*" }
openssl = { version = "*", features = ["vendored"]}
rand = { version = "*" }
x25519-dalek = { version = "*" }
rand_core = { version = "0.5.1" }

[dev-dependencies]
regex = { version = "*" }
