[package]
name = "dawn-crypto"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto = { version = "*" }
hex = { version = "*" }
ring = { version = "*" }
openssl = { version = "*", features = ["vendored"]}
# Forcing OpenSSL 1.1.1s as 1.1.1t does not cross-compile for android
# Once there is a new release that builds successfully, the following line should be removed!
openssl-src = { version = "=111.25.0" }
rand = { version = "*" }
x25519-dalek = { version = "*" }
rand_core = { version = "0.5.1" }
regex = { version = "*" }
lazy_static = { version = "*" }
chrono = { version = "*" }
