[package]
name = "dawn-crypto"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto = { version = "*" }
hex = { version = "*" }
ring = { version = "*" }
openssl = { version = "*", features = ["vendored"]}
openssl-src = { version = "*" }
rand = { version = "*" }
x25519-dalek = { version = "*" , features = ["static_secrets"]}
rand_core = { version = "0.5.1" }
regex = { version = "*" }
lazy_static = { version = "*" }
chrono = { version = "*" }
